# jobrog

./: .gitignore  CHANGES.md  Cargo.toml  README.md
src/: add.rs  configure.rs  done.rs  edit.rs  first.rs  last.rs  lib.rs  log.rs  log_items.rs  main.rs  note.rs  parse.rs  resume.rs  statistics.rs  summary.rs  tag.rs  truncate.rs  util.rs  vacation.rs  when.rs
