[package]
name = "jobrog"
version = "0.1.0"
authors = ["dfhoughton <dfhoughton@gmail.com>"]
description = "command line job clock"
edition = "2018"

[[bin]]
name = "job"
path = "src/main.rs"

[dependencies]
pidgin = "0.4"
clap = "2.33"
larry = "0"
regex = "1"
deflate = "0"
rust-ini = "0"
dirs = "2"
chrono = "0"
colonnade = "1"
term_size = "0"
lazy_static = "1.4"
ansi_term = "0"
[dependencies.two_timer]
version = "~1.3"
features = ["small_grammar"]

[dev-dependencies]
rand = "0"
