[package]
name = "jobrog"
version = "0.1.3"
authors = ["dfhoughton <dfhoughton@gmail.com>"]
description = "command line job clock"
homepage="https://github.com/dfhoughton/jobrog"
repository="https://github.com/dfhoughton/jobrog"
readme="README.md"
keywords=["work", "log", "time", "notes"]
categories=["command-line-utilities"]
license="GPL-2.0"
edition = "2018"

[profile.release]
panic="abort"

[[bin]]
name = "job"
path = "src/main.rs"

[dependencies]
pidgin = "0.4"
clap = "2.33"
larry = "0"
regex = "1"
flate2 = "1"
rust-ini = "0"
dirs = "2"
chrono = "0"
colonnade = "1"
term_size = "0"
lazy_static = "1.4"
ansi_term = "0"
serde_json = "1"
[dependencies.two_timer]
version = "~1.3.4"
features = ["small_grammar"]

[dev-dependencies]
rand = "0"
